[package]
name = "polkadot-runtime-constants"
edition = "2021"
version = "0.1.0"
#TODO
# repository.workspace = true
# version.workspace = true
# authors.workspace = true
# edition.workspace = true
# license.workspace = true

[dependencies]
smallvec = { workspace = true }


cumulus-primitives-core = { workspace = true }
frame-support = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
sp-core = { workspace = true }

xcm = { workspace = true }
xcm-builder = { workspace = true }

[features]
default = ["std"]
testnet-id = []
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"polkadot-primitives/std",
	"polkadot-runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"xcm/std",
]
